manifests/k8s-test-app/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: vanneback/test-app-frontend:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
