manifests/k8s-test-app/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-app
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: demo.compliantk8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: http
  tls:
    - secretName: demo-certs
      hosts:
        - demo.compliantk8s.com
