manifests/k8s-test-app/frontend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-all
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: frontend
  ingress:
  - from: []
